k8s/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/actions.rewrite-httpd: |
      {"type":"redirect","redirectConfig":{"path":"/","statusCode":"HTTP_301"}}
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-svc
                port:
                  number: 80
          - path: /httpd
            pathType: Prefix
            backend:
              service:
                name: httpd-svc
                port:
                  number: 80
